feat: Dockerfiles criam arquivos .env automaticamente
- Backend Dockerfile cria .env com todas as variáveis
- Frontend Dockerfile cria .env.production com NEXT_PUBLIC_API_URL
- docker-compose.yml passa variáveis como ARG durante build
- Variáveis vêm do .env da raiz
- Criado DOCKERFILE-ENV-GUIDE.md com guia completo
- Permite customização via .env sem editar Dockerfiles

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -30,9 +30,60 @@ FROM node:20-alpine AS runner
 
 WORKDIR /app
 
+# ARGs para variáveis de ambiente (podem ser passados no build)
+ARG MONGO_PASSWORD=changeme123
+ARG JWT_SECRET=your-secret-key-change-in-production
+ARG ENCRYPTION_KEY=your-encryption-key-32-chars-min
+ARG SERVER_IP=localhost
+ARG BASE_DOMAIN=sslip.io
+ARG FRONTEND_URL=http://localhost:8000
+ARG GITHUB_CLIENT_ID=
+ARG GITHUB_CLIENT_SECRET=
+ARG GITHUB_CALLBACK_URL=http://localhost:8000/auth/github/callback
+ARG ASSAS_API_KEY=
+ARG ASSAS_WEBHOOK_TOKEN=
+ARG ASSAS_ENVIRONMENT=sandbox
+ARG EMAIL_ENABLED=false
+ARG EMAIL_SERVICE=gmail
+ARG EMAIL_USER=
+ARG EMAIL_PASSWORD=
+
 # Variáveis de ambiente
 ENV NODE_ENV=production
 ENV PORT=8001
+
+# Criar arquivo .env com as credenciais
+RUN echo "# Backend Environment Variables" > .env && \
+    echo "PORT=8001" >> .env && \
+    echo "NODE_ENV=production" >> .env && \
+    echo "" >> .env && \
+    echo "# MongoDB" >> .env && \
+    echo "MONGO_PASSWORD=${MONGO_PASSWORD}" >> .env && \
+    echo "" >> .env && \
+    echo "# Segurança" >> .env && \
+    echo "JWT_SECRET=${JWT_SECRET}" >> .env && \
+    echo "ENCRYPTION_KEY=${ENCRYPTION_KEY}" >> .env && \
+    echo "" >> .env && \
+    echo "# Servidor" >> .env && \
+    echo "SERVER_IP=${SERVER_IP}" >> .env && \
+    echo "BASE_DOMAIN=${BASE_DOMAIN}" >> .env && \
+    echo "FRONTEND_URL=${FRONTEND_URL}" >> .env && \
+    echo "" >> .env && \
+    echo "# GitHub OAuth" >> .env && \
+    echo "GITHUB_CLIENT_ID=${GITHUB_CLIENT_ID}" >> .env && \
+    echo "GITHUB_CLIENT_SECRET=${GITHUB_CLIENT_SECRET}" >> .env && \
+    echo "GITHUB_CALLBACK_URL=${GITHUB_CALLBACK_URL}" >> .env && \
+    echo "" >> .env && \
+    echo "# Assas" >> .env && \
+    echo "ASSAS_API_KEY=${ASSAS_API_KEY}" >> .env && \
+    echo "ASSAS_WEBHOOK_TOKEN=${ASSAS_WEBHOOK_TOKEN}" >> .env && \
+    echo "ASSAS_ENVIRONMENT=${ASSAS_ENVIRONMENT}" >> .env && \
+    echo "" >> .env && \
+    echo "# Email" >> .env && \
+    echo "EMAIL_ENABLED=${EMAIL_ENABLED}" >> .env && \
+    echo "EMAIL_SERVICE=${EMAIL_SERVICE}" >> .env && \
+    echo "EMAIL_USER=${EMAIL_USER}" >> .env && \
+    echo "EMAIL_PASSWORD=${EMAIL_PASSWORD}" >> .env
 
 # Copiar package files (com gitCommit)
 COPY --from=builder /app/package*.json ./
