fix: Atualizar Dockerfiles com criação de .env

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -34,12 +34,12 @@ WORKDIR /app
 ARG MONGO_PASSWORD=changeme123
 ARG JWT_SECRET=your-secret-key-change-in-production
 ARG ENCRYPTION_KEY=your-encryption-key-32-chars-min
-ARG SERVER_IP=localhost
+ARG SERVER_IP=38.242.213.195
 ARG BASE_DOMAIN=sslip.io
-ARG FRONTEND_URL=http://localhost:8000
-ARG GITHUB_CLIENT_ID=
-ARG GITHUB_CLIENT_SECRET=
-ARG GITHUB_CALLBACK_URL=http://localhost:8000/auth/github/callback
+ARG FRONTEND_URL=http://painel.38.242.213.195.sslip.io
+ARG GITHUB_CLIENT_ID=Ov23liUAMV3RZp1pk9PH
+ARG GITHUB_CLIENT_SECRET=ae184835a93a3a81c259ddc2f42cb8bc175a1b0a
+ARG GITHUB_CALLBACK_URL=http://painel.38.242.213.195.sslip.io/auth/github/callback
 ARG ASSAS_API_KEY=
 ARG ASSAS_WEBHOOK_TOKEN=
 ARG ASSAS_ENVIRONMENT=sandbox
