fix: GitHub OAuth agora busca configurações do MongoDB em vez do .env
- Corrigido backend/src/routes/github.ts para buscar configs do SystemSettings
- Corrigido backend/src/routes/auth.ts para buscar configs do SystemSettings
- Adicionado git e bash nos Dockerfiles (necessário para deploy do painel)
- Sistema agora usa configurações salvas no painel Admin em tempo real
- Adicionado gitCommit no package.json durante build para detecção de versão
- Criados guias de configuração do GitHub OAuth e Token

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,8 @@
 # Stage 1: Builder
 FROM node:20-alpine AS builder
 
-# Instalar dependências do sistema incluindo git
-RUN apk add --no-cache python3 make g++ git
+# Instalar dependências do sistema incluindo git e bash
+RUN apk add --no-cache python3 make g++ git bash openssh-client
 
 WORKDIR /app
 
@@ -27,6 +27,9 @@ RUN npm run build:prod || npx tsc --skipLibCheck --noEmit false || echo "Build c
 
 # Stage 2: Runner
 FROM node:20-alpine AS runner
+
+# Instalar git e bash para deploy do painel
+RUN apk add --no-cache git bash openssh-client
 
 WORKDIR /app
 
