--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -52,12 +52,6 @@ services:
     depends_on:
       mongodb:
         condition: service_healthy
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8001/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 120s
 
   # Frontend
   frontend:
@@ -81,8 +75,7 @@ services:
       - "traefik.http.services.ark-deploy.loadbalancer.server.port=8000"
       - "traefik.docker.network=coolify"
     depends_on:
-      backend:
-        condition: service_healthy
+      - backend
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8000"]
       interval: 30s
