--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -59,8 +59,8 @@ EXPOSE 8000
 
 ENV PORT=8000
 
-# Healthcheck
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+# Healthcheck - dar mais tempo para o Next.js iniciar
+HEALTHCHECK --interval=30s --timeout=10s --start-period=120s --retries=5 \
   CMD wget --no-verbose --tries=1 --spider http://localhost:8000 || exit 1
 
 # Iniciar Next.js
