--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -58,6 +58,7 @@ USER nextjs
 EXPOSE 8000
 
 ENV PORT=8000
+ENV HOSTNAME=0.0.0.0
 
 # Healthcheck - dar mais tempo para o Next.js iniciar
 HEALTHCHECK --interval=30s --timeout=10s --start-period=120s --retries=5 \
