feat: Sistema de templates de Dockerfile
- Adicionadas rotas GET /api/projects/dockerfile-templates
- Adicionada rota GET /api/projects/dockerfile-templates/:id
- Campo dockerfileTemplate no modelo Project
- Integração com DockerfileTemplateService no DeployService
- UI de seleção de template no CreateProjectWithGitHub
- Modal de preview de template
- 5 templates prontos: nodejs, nextjs, react-cra, python-flask, python-django
- Detecção automática baseada em package.json e requirements.txt
- Correção do problema Guru-TI rodando em modo desenvolvimento

Arquivos modificados:
- backend/src/routes/projects.ts
- backend/src/models/Project.ts
- backend/src/services/DeployService.ts
- frontend/src/components/CreateProjectWithGitHub.tsx

Arquivos criados:
- backend/src/services/DockerfileTemplateService.ts
- backend/src/templates/dockerfiles/*.dockerfile
- DOCKERFILE-TEMPLATES-IMPLEMENTATION.md
- COMO-USAR-TEMPLATES-DOCKERFILE.md
- ATUALIZAR-TEMPLATES-DOCKERFILE.sh

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ark-panel",
+  "name": "ark-deploy",
   "version": "1.5.0",
-  "description": "Ark Panel - Painel de gerenciamento de deploy multi-projeto com detecção automática de atualizações",
+  "description": "Ark Deploy - Sistema de gerenciamento de deploy multi-projeto com detecção automática de atualizações",
   "scripts": {
     "install:all": "npm install --prefix backend && npm install --prefix frontend",
     "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
@@ -14,14 +14,12 @@
   },
   "keywords": [
     "deploy",
-    "panel",
     "manager",
     "git",
     "automation",
-    "devops",
-    "ark"
+    "devops"
   ],
-  "author": "Ark Panel Team",
+  "author": "",
   "license": "MIT",
   "devDependencies": {
     "concurrently": "^8.2.2"
